@@ -1,3 +1,8 @@
+2006-07-17  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
+
+	* tests/ns_log.test: Adjusted tests for new syntax
+	of the ns_logctl command.
+
 2006-07-13  Stephen Deasey  <sdeasey@users.sf.net>
 
 	* nsd/driver.c: Make sure upload stats lock is always unlocked.
